--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,10 +38,11 @@ jobs:
 
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
-      - name: Set Up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v1
+      - name: Set up JDK for build and test
+        uses: actions/setup-java@v4
         with:
-          java-version: ${{ matrix.java }}
+          distribution: temurin # Temurin is a distribution of adoptium
+          java-version: 21
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
         uses: actions/checkout@v2
@@ -60,7 +61,7 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
       - uses: actions/upload-artifact@v3
         with:
-          name: async-plugin-linux-${{ matrix.java }}
+          name: async-plugin-linux-21
           path: ${{ steps.step-build-test-linux.outputs.build-test-linux }}
           if-no-files-found: error
 
@@ -145,8 +146,9 @@ jobs:
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
       - name: Set Up JDK 21
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
+          distribution: temurin # Temurin is a distribution of adoptium
           java-version: 21
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
@@ -174,8 +176,9 @@ jobs:
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
       - name: Set Up JDK 21
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
+          distribution: temurin # Temurin is a distribution of adoptium
           java-version: 21
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
