--- a/.github/workflows/multi-node-test-workflow.yml
+++ b/.github/workflows/multi-node-test-workflow.yml
@@ -1,7 +1,5 @@
 name: Multi node test workflow
 
-env:
-  java_version: 21
 # This workflow is triggered on pull requests to master
 on:
   pull_request:
@@ -35,10 +33,12 @@ jobs:
 
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
-      - name: Set Up JDK 21
-        uses: actions/setup-java@v1
+      - name: Set Up JDK
+        uses: actions/setup-java@v4
         with:
-          java-version: ${{ env.java_version }}
+          distribution: temurin # Temurin is a distribution of adoptium
+          java-version: 21
+
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
         uses: actions/checkout@v2
