Build/publish/release java 11/17/21 but test only with java 21
Signed-off-by: Finn Carroll <carrofin@amazon.com>

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -9,6 +9,10 @@ on:
 
 jobs:
   build-and-publish-snapshots:
+    strategy:
+      matrix:
+        java: [ 11,17,21 ]
+
     runs-on: ubuntu-latest
 
     permissions:
