--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,19 +36,23 @@ jobs:
       # need to switch to root so that github actions can install runner binary on container without permission issues.
       options: --user root
 
-    env: # actions/checkout uses node 16
+    # actions/checkout@v4 and actions/setup-java@v4 use node 20:
+    # https://github.com/actions/checkout/releases/tag/v4.0.0
+    # container image does not have GLIBC_2.28 required for this node version
+    # as such use @v3 actions instead for this workflow and set ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION
+    env:
       ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
 
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
       - name: Set up JDK ${{ matrix.java }} for build and test
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3
         with:
           distribution: temurin # Temurin is a distribution of adoptium
           java-version: ${{ matrix.java }}
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
       - name: Build with Gradle
         id: step-build-test-linux
         run: |
@@ -81,7 +85,7 @@ jobs:
 
     steps:
       - name: Checkout Branch
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
         with:
           name: async-plugin-linux-${{ matrix.java }}
@@ -149,19 +153,16 @@ jobs:
     # This job runs on Windows.
     runs-on: windows-latest
 
-    env: # actions/checkout uses node 16
-      ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
-
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
       - name: Set Up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3
         with:
           distribution: temurin # Temurin is a distribution of adoptium
           java-version: ${{ matrix.java }}
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
       - name: Build with Gradle
         run: ./gradlew.bat build -x integTest -x jacocoTestReport
         env:
@@ -184,19 +185,16 @@ jobs:
     # This job runs on Mac OS.
     runs-on: macos-latest
 
-    env: # actions/checkout uses node 16
-      ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
-
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
       - name: Set Up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3
         with:
           distribution: temurin # Temurin is a distribution of adoptium
           java-version: ${{ matrix.java }}
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
       - name: Build with Gradle
         run: ./gradlew build -x integTest -x jacocoTestReport
         env:
