--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,11 +15,10 @@ jobs:
       product: opensearch
 
   linux-build:
-    needs: Get-CI-Image-Tag
     strategy:
       matrix:
-        java:
-          - 21
+        java: [ 21 ]
+    needs: Get-CI-Image-Tag
     # Job name
     name: Linux - Build Asynchronous Search
     # This job runs on Linux.
@@ -33,18 +32,23 @@ jobs:
       # need to switch to root so that github actions can install runner binary on container without permission issues.
       options: --user root
 
+    # actions/checkout@v4 and actions/setup-java@v4 use node 20:
+    # https://github.com/actions/checkout/releases/tag/v4.0.0
+    # container image does not have GLIBC_2.28 required for this node version
+    # as such use @v3 actions instead for this workflow and set ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION
     env:
       ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
 
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
-      - name: Set Up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v1
+      - name: Set up JDK ${{ matrix.java }} for build and test
+        uses: actions/setup-java@v3
         with:
+          distribution: temurin # Temurin is a distribution of adoptium
           java-version: ${{ matrix.java }}
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Build with Gradle
         id: step-build-test-linux
         run: |
@@ -65,18 +69,21 @@ jobs:
           if-no-files-found: error
 
   linux-test-docker:
-    needs: linux-build
     strategy:
       matrix:
-        java:
-          - 21
+        java: [ 21 ]
+    needs: linux-build
     # Job name
     name: Test Asynchronous Search with opensearchstaging docker
     # This job runs on Linux.
     runs-on: ubuntu-latest
+
+    env: # actions/checkout uses node 16
+      ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
+
     steps:
       - name: Checkout Branch
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
         with:
           name: async-plugin-linux-${{ matrix.java }}
@@ -138,19 +145,24 @@ jobs:
           path: build/testclusters/integTest-*/logs/*
 
   windows-build:
+    strategy:
+      matrix:
+        java: [ 21 ]
     # Job name
     name: Windows - Build Asynchronous Search
     # This job runs on Windows.
     runs-on: windows-latest
+
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
-      - name: Set Up JDK 21
-        uses: actions/setup-java@v1
+      - name: Set Up JDK ${{ matrix.java }}
+        uses: actions/setup-java@v3
         with:
-          java-version: 21
+          distribution: temurin # Temurin is a distribution of adoptium
+          java-version: ${{ matrix.java }}
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Build with Gradle
         run: ./gradlew.bat build -x integTest -x jacocoTestReport
         env:
@@ -167,19 +179,24 @@ jobs:
           path: asynchronous-search-artifacts
 
   mac-os-build:
+    strategy:
+      matrix:
+        java: [ 21 ]
     # Job name
     name: MacOS - Build Asynchronous Search
     # This job runs on Mac OS.
     runs-on: macos-latest
+
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
-      - name: Set Up JDK 21
-        uses: actions/setup-java@v1
+      - name: Set Up JDK ${{ matrix.java }}
+        uses: actions/setup-java@v3
         with:
-          java-version: 21
+          distribution: temurin # Temurin is a distribution of adoptium
+          java-version: ${{ matrix.java }}
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Build with Gradle
         run: ./gradlew build -x integTest -x jacocoTestReport
         env:
