--- a/.github/workflows/multi-node-test-workflow.yml
+++ b/.github/workflows/multi-node-test-workflow.yml
@@ -1,7 +1,5 @@
 name: Multi node test workflow
 
-env:
-  java_version: 21
 # This workflow is triggered on pull requests to master
 on:
   pull_request:
@@ -18,6 +16,9 @@ jobs:
       product: opensearch
 
   build:
+    strategy:
+      matrix:
+        java: [ 21 ]
     # Job name
     needs: Get-CI-Image-Tag
     name: Build Asynchronous Search
@@ -30,18 +31,24 @@ jobs:
       # need to switch to root so that github actions can install runner binary on container without permission issues.
       options: --user root
 
+    # actions/checkout@v4 and actions/setup-java@v4 use node 20:
+    # https://github.com/actions/checkout/releases/tag/v4.0.0
+    # container image does not have GLIBC_2.28 required for this node version
+    # as such use @v3 actions instead for this workflow and set ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION
     env:
       ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
 
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
-      - name: Set Up JDK 21
-        uses: actions/setup-java@v1
+      - name: Set Up JDK ${{ matrix.java }}
+        uses: actions/setup-java@v3
         with:
-          java-version: ${{ env.java_version }}
+          distribution: temurin # Temurin is a distribution of adoptium
+          java-version: ${{ matrix.java }}
+
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Run integration tests with multi node config
         run: |
           chown -R 1000:1000 `pwd`
