Add Finn to maintainers and codeowners
Signed-off-by: Marc Handalian <marc.handalian@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # This should match with the users in MAINTAINERS.md file
-*   @Bukhtawar @bharath-techie @Arpit-Bandejiya @RS146BIJAY @pranikum @mch2 @andrross @Poojita-Raj @kotwanikunal @Rishikesh1159
+*   @Bukhtawar @bharath-techie @Arpit-Bandejiya @RS146BIJAY @pranikum @mch2 @andrross @Poojita-Raj @kotwanikunal @Rishikesh1159 @finnegancarroll
