--- a/.github/workflows/multi-node-test-workflow.yml
+++ b/.github/workflows/multi-node-test-workflow.yml
@@ -55,8 +55,8 @@ jobs:
           su `id -un 1000` -c "./gradlew integTest -PnumNodes=5"
       - name: Check Disk Space
         run: |
-          df -h
-          du -sh /
+          df -h || true
+          du -sh / || true
       - name: Run Backwards Compatibility Tests
         run: |
           echo "Running backwards compatibility tests ..."
